@@ -1,5 +1,5 @@
-# $Id: Makefile.am,v 1.7 2004/02/06 21:52:58 sisoft Exp $
+# $Id: Makefile.am,v 1.8 2004/05/29 11:56:32 sisoft Exp $
 AUTOMAKE_OPTIONS = foreign dist-bzip2 1.5
 
 SUBDIRS = src stuff debian
-EXTRA_DIST = FAQ Changes qico.conf.sample depcomp autogen.sh TodayFixes
+EXTRA_DIST = FAQ Changes qico.conf.sample depcomp autogen.sh TodayFixes qico.spec
